--- a/page.html
+++ b/page.html
@@ -23,7 +23,6 @@
             position: fixed;
             text-align: right;
             bottom: 0px;
-            /* width: 100%; */
         }
 
         .predicted_signs {
@@ -79,11 +78,6 @@
                 style="float: left; margin-left: 15px;">
 
         </div>
-        <!-- <div>
-            <span class="helper" style="margin-bottom: 10px;"></span><img src="testing.png" alt="Predicted sign" width="100" height="100"
-                style="float: left; margin-left: 15px;">
-
-        </div> -->
         <div>
             <span class="helper" style="margin-top: 10px;"></span><img src="second_pred.png" alt="Predicted sign" width="100" height="100"
                 style="float: left; margin-left: 15px;">
@@ -100,9 +94,8 @@
     <div class="stream_name" style="text-align: center;"></div>
     <div class="preds_name" style="text-align: left;">Prepoznati znakovi</div>
     <div class="Authors">
-        <div class="authors">Aleksandar Ritan 1150/14<br>Slaven Smiljanić 1104/16</div>>
+        <div class="authors">Aleksandar Ritan 1150/14<br>Slaven Smiljanić 1104/16<br><b>Multimedijalni signali i sistemi 2020</b></div>>
     </div>
-    <div class="Subject" style="margin-top: 35px;">Multimedijalni signali i sistemi 2019/20</div>
 </div>
 
 </html>
